Breaking Change: New Market Recipe Format (+ double block market) (#204)
* wip: New registry format, market recipes

* wip: Convert byg data

* wip: Convert twilightforest data

* wip: Convert more data, fix category loading, fix market menu

* wip: fix preset loading

* wip: Fix payment tooltip

* wip: Some improvements to payment rendering, still not ideal but don't wanna redesign the whole screen just yet

* wip: revert debug change

* wip: rename optional => enabled,

* wip: move some items to different presets

* wip: remove imc api

* wip: fix jei and emi compat

* wip: split market into double block